Verif/Test/Invalide/test_erreur_2.17-1.deca
// Description:
//	   test règle 2.17 
// Resultats:
//    Erreur contextuelle
//    Ligne 21 : La signature de la méthode 'getX' diffère dans la super-classe (règle 2.17)
// 
// Attributs: exec incorrect automatique
//
// Historique:
//    cree le 20/01/2012

class A {

   int getX() {
      return 2;
   }
}

class B extends A {

   int getX(int i) {
      return i;
   }
}
